--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.REBOOT" />
-    <user-permission android:name="android.permission.ACCESS_CACHE_FILESYSTEM"/>
+
+    <user-permission android:name="android.permission.ACCESS_CACHE_FILESYSTEM" />
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".Application"
@@ -16,7 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".volume.VolumeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +28,11 @@
         </activity>
 
         <service
-            android:name=".BsdiffFakeService"
+            android:name=".volume.VolumeService"
+            android:enabled="true"
             android:exported="true" />
+
+        <activity android:name=".volume.ShowVolumeActivity" android:theme="@style/DialogActivityStyle"></activity>
     </application>
 
 </manifest>
