--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'kotlin-android'
 
 def env = "-"+(System.getProperty("env")?:System.getenv()["USERDOMAIN"])
 
@@ -61,4 +62,6 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     apt 'com.bluelinelabs:logansquare-compiler:1.3.6'
     compile 'com.bluelinelabs:logansquare:1.3.6'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
 }
