【BT】蓝牙电话初步封装

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:name=".volume.VolumeService"
             android:enabled="true"
             android:exported="true" />
-        <service android:name=".bluetooth.BluetoothService" />
+        <service android:name=".bluetooth.BluetoothHeadsetService" />
         <activity android:name=".volume.ShowVolumeActivity" android:theme="@style/DialogActivityStyle"></activity>
     </application>
 
