--- a/build.gradle
+++ b/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     apt 'com.bluelinelabs:logansquare-compiler:1.3.6'
     compile 'com.bluelinelabs:logansquare:1.3.6'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile ("com.tuyou.tsd:statemachine:1.0-release"){ changing = true}
 
 }
